--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -55,6 +55,24 @@
           <input type="text" id="newAddress" name="newAddress" th:field="*{newAddress}" class="form-control"
                  value="札幌市南区1"/>
         </div>
+        <div class="form-group">
+          <label for="monthId">引っ越し月</label>
+          <select id="monthId" name="monthId" class="form-control" th:field="*{monthId}">
+            <option th:value="1" th:text="1月">1月</option>
+            <option th:value="2" th:text="2月">2月</option>
+            <option th:value="3" th:text="3月">3月</option>
+            <option th:value="4" th:text="4月">4月</option>
+            <option th:value="5" th:text="5月">5月</option>
+            <option th:value="6" th:text="6月">6月</option>
+            <option th:value="7" th:text="7月">7月</option>
+            <option th:value="8" th:text="8月">8月</option>
+            <option th:value="9" th:text="9月">9月</option>
+            <option th:value="10" th:text="10月">10月</option>
+            <option th:value="11" th:text="11月">11月</option>
+            <option th:value="12" th:text="12月">12月</option>
+          </select>
+        </div>
+
       </fieldset>
       <fieldset>
         <legend>荷物情報</legend>
