--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -18,23 +18,33 @@
     <ul th:if="${#fields.hasErrors('all')}">
       <li th:each="err : ${#fields.errors('all')}" th:text="${err}"></li>
     </ul>
+    <div class="orderNum">
+        <img src="img/order1.png" alt="順番1" width="50%" height="50%">
+    </div>
     <div class="col-sm-12">
       <fieldset>
-        <legend>個人情報</legend>
+        <legend>個人情報
+          <font size="3" color="red">  *</font>
+          <font size="3">は必須項目です</font></br>
+        </legend>
         <div class="form-group">
           <label for="customerName">氏名</label>
-          <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎"/>
+          <font color="red">*</font></br>
+          <input type="text" id="customerName" name="customerName" placeholder="例：山田太郎" th:field="*{customerName}" class="form-control" value="山田太郎"/>
         </div>
         <div class="form-group">
           <label for="tel">連絡先TEL</label>
-          <input type="tel" id="tel" name="tel" th:field="*{tel}" class="form-control" value="03-1234-5678"/>
+          <font color="red">*</font></br>
+          <input type="tel" id="tel" name="tel" placeholder="例：08012345678(半角数字)" th:field="*{tel}" class="form-control" value="03-1234-5678"/>
         </div>
         <div class="form-group">
           <label for="email">連絡先メールアドレス</label>
-          <input type="text" id="email" name="email" th:field="*{email}" class="form-control" value="test@test.com"/>
+          <font color="red">*</font></br>
+          <input type="text" id="email" name="email" placeholder="例：abcdefgh@xx.xx.jp(半角英数字)" th:field="*{email}" class="form-control" value="test@test.com"/>
         </div>
         <div class="form-group">
           <label for="oldPrefectureId">転居元住所（都道府県）</label>
+          <font color="red">*</font></br>
           <select id="oldPrefectureId" name="oldPrefectureId" class="form-control">
             <option th:each="prefecture : ${prefectures}" th:value="${prefecture.prefectureId}" th:field="*{oldPrefectureId}">[[${prefecture.prefectureName}]]</option>
           </select>
@@ -46,6 +56,7 @@
         </div>
         <div class="form-group">
           <label for="newPrefectureId">転居先住所（都道府県）</label>
+          <font color="red">*</font></br>
           <select id="newPrefectureId" name="newPrefectureId" class="form-control">
             <option th:each="prefecture : ${prefectures}" th:value="${prefecture.prefectureId}" th:field="*{newPrefectureId}">[[${prefecture.prefectureName}]]</option>
           </select>
@@ -85,8 +96,8 @@
       </fieldset>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToTop" class="btn btn-primary">TOPへ戻る</button>
-          <button type="submit" name="confirm" class="btn btn-primary">確認</button>
+          <button type="submit" name="confirm" class="btn btn-primary">確認</button></br></br>
+          <button type="submit" name="backToTop" class="btn btn-back">TOPへ戻る</button>
         </div>
       </div>
     </div>
