--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -12,10 +12,13 @@
 <body>
 
 <nav th:insert="header.html :: header"></nav>
+<div class="orderNum">
+    <img src="img/order4.png" alt="順番4" width="50%" height="50%">
+</div>
   <div class="ui main container">
     <div class="text-center">
       <h2>申し込みが完了しました。</h2>
-      <p>お電話にて正確な見積もり結果をお伝えいたします。</p>
+      <p>3営業日以内に0123456789より、お電話にて正確な見積もり結果をお伝えいたします。</p>
     </div>
   </div>
 <script src="../js/jquery-3.5.1.min.js" th:src="@{/js/jquery-3.5.1.min.js}"></script>
