--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -15,6 +15,9 @@
 <div class="container">
   <form th:action="@{/order}" th:object="${userOrderForm}" class="form-horizontal" method="post">
     <h1>概算お見積り結果</h1>
+    <div class="orderNum">
+      <img src="img/order3.png" alt="順番3" width="50%" height="50%">
+    </div>
     <div class="col-sm-12">
       <h2>概算お見積り結果は<span th:text="${price}"></span>円です。</h2>
       <h4>個人情報</h4>
@@ -97,7 +100,7 @@
       </table>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToConfirm" class="btn btn-primary">戻る</button>
+          <button type="submit" name="backToConfirm" class="btn btn-back">戻る</button></br></br>
           <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼</button>
         </div>
       </div>
