--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -193,6 +193,10 @@ ul.label {
     border: 1px solid rgba(34,36,38,.15);
 }
 
+/*マーカークラスの生成*/
+.marker_line { background:linear-gradient(transparent 0%, #fec1fe 0%); }
+
 td {
     width: 400px;
 }
+
