--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,3 +15,10 @@
 </nav>
 </body>
 </html>
+
+<!--フッター(連絡先)-->
+<footer class="text-center bg-dark text-white">
+    <p class="py-3">連絡先</p>
+    電話： 〇〇〇〇-〇〇〇〇-〇〇〇〇 <br>
+    メール: 〇〇〇〇-〇〇〇〇@〇〇〇〇
+</footer>
