--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -24,3 +24,10 @@
 <script src="../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
+
+<!--フッター(連絡先)-->
+<footer class="text-center bg-dark text-white">
+  <p class="py-3">連絡先</p>
+  電話： 〇〇〇〇-〇〇〇〇-〇〇〇〇 <br>
+  メール: 〇〇〇〇-〇〇〇〇@〇〇〇〇
+</footer>
