--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -35,9 +35,11 @@
         </div>
 <!--        メールアドレス確認用-->
         <div class="form-group">
-          <label for="email">連絡先メールアドレス(確認用)</label>
-          <input type="text" id="emailConfirm" name="emailConfirm"  class="form-control" value="test@test.com"/>
+          <label for="emailConfirm">連絡先メールアドレス(確認用)</label>
+          <input type="text" id="emailConfirm" name="emailConfirm"  class="form-control" value=""/>
         </div>
+        <script src="confirm.js" th:src="@{/js/confirm.js}"></script>
+        <input type="button" value="確認する" onclick="{if(CheckEmail()){alert('正しいメールアドレスです！')}else{alert('正しくない可能性があります・・。')}}">
 <!--        -->
         <div class="form-group">
           <label for="oldPrefectureId">転居元住所（都道府県）</label>
@@ -98,27 +100,27 @@
     </div>
   </form>
 </div>
-<script src="../js/jquery-3.5.1.min.js" th:src="@{/js/jquery-3.5.1.min.js}"></script>
+<!--<script src="../js/jquery-3.5.1.min.js" th:src="@{/js/jquery-3.5.1.min.js}"></script>-->
 <script src="../js/popper.min.js" th:src="@{/js/popper.min.js}"></script>
 <script src="../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 
 <!--メールが一致しているかの確認-->
-<script>
-  function CheckEmail() {
-    //IE対応の為変更
-    var mail = email.value; //メールフォームの値を取得
-    var mailConfirm = emailConfirm.value; //メール確認用フォームの値を取得
-    var mail = document.getElementById("email_1").value; //メールフォームの値を取得
-    var mailConfirm = document.getElementById("emailConfirm_1").value; //メール確認用フォームの値を取得
-    // パスワードの一致確認
-    if (mail != mailConfirm){
-      alert("パスワードと確認用パスワードが一致しません"); // 一致していなかったら、エラーメッセージを表示する
-      return false;
-    }else{
-      return true;
-    }
-  };
-</script>
+<!--<script>-->
+<!--  function CheckEmail() {-->
+<!--    //IE対応の為変更-->
+<!--    var mail = email.value; //メールフォームの値を取得-->
+<!--    var mailConfirm = emailConfirm.value; //メール確認用フォームの値を取得-->
+<!--    var mail = document.getElementById("email_1").value; //メールフォームの値を取得-->
+<!--    var mailConfirm = document.getElementById("emailConfirm_1").value; //メール確認用フォームの値を取得-->
+<!--    // パスワードの一致確認-->
+<!--    if (mail != mailConfirm){-->
+<!--      alert("パスワードと確認用パスワードが一致しません"); // 一致していなかったら、エラーメッセージを表示する-->
+<!--      return false;-->
+<!--    }else{-->
+<!--      return true;-->
+<!--    }-->
+<!--  };-->
+<!--</script>-->
 
 </body>
 
