--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -58,18 +58,18 @@
         <div class="form-group">
           <label for="monthId">引っ越し月</label>
           <select id="monthId" name="monthId" class="form-control" th:field="*{monthId}">
-            <option th:value="1" th:text="1月">1月</option>
-            <option th:value="2" th:text="2月">2月</option>
-            <option th:value="3" th:text="3月">3月</option>
-            <option th:value="4" th:text="4月">4月</option>
-            <option th:value="5" th:text="5月">5月</option>
-            <option th:value="6" th:text="6月">6月</option>
-            <option th:value="7" th:text="7月">7月</option>
-            <option th:value="8" th:text="8月">8月</option>
-            <option th:value="9" th:text="9月">9月</option>
-            <option th:value="10" th:text="10月">10月</option>
-            <option th:value="11" th:text="11月">11月</option>
-            <option th:value="12" th:text="12月">12月</option>
+            <option th:value="1月" th:text="1月">1月</option>
+            <option th:value="2月" th:text="2月">2月</option>
+            <option th:value="3月" th:text="3月">3月</option>
+            <option th:value="4月" th:text="4月">4月</option>
+            <option th:value="5月" th:text="5月">5月</option>
+            <option th:value="6月" th:text="6月">6月</option>
+            <option th:value="7月" th:text="7月">7月</option>
+            <option th:value="8月" th:text="8月">8月</option>
+            <option th:value="9月" th:text="9月">9月</option>
+            <option th:value="10月" th:text="10月">10月</option>
+            <option th:value="11月" th:text="11月">11月</option>
+            <option th:value="12月" th:text="12月">12月</option>
           </select>
         </div>
 
