--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -56,8 +56,9 @@
                  value="札幌市南区1"/>
         </div>
         <div class="form-group">
-          <label for="monthId">引っ越し月</label>
-          <select id="monthId" name="monthId" class="form-control" th:field="*{monthId}">
+          <label for="month">引っ越し月　<font size="2" >(※オプション料を除く料金が3、４月は1.5倍、9月は1.2倍)</font>
+            　</label>
+          <select id="month" name="month" class="form-control" th:field="*{month}">
             <option th:value="1月" th:text="1月">1月</option>
             <option th:value="2月" th:text="2月">2月</option>
             <option th:value="3月" th:text="3月">3月</option>
