1月31日作業分の保存　なつ

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -102,8 +102,8 @@
       </table>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToInput" class="btn btn-back">修正</button></br></br>
-          <button type="submit" name="calculation" class="btn btn-primary">概算見積もりをする</button>
+          <button type="submit" name="calculation" class="btn btn-primary">概算見積もりをする</button><br><br>
+          <button type="submit" name="backToInput" class="btn btn-back">修正</button>
         </div>
       </div>
     </div>
