--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -100,8 +100,8 @@
       </table>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToConfirm" class="btn btn-back">戻る</button></br></br>
-          <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼</button>
+          <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼</button><br><br>
+          <button type="submit" name="backToConfirm" class="btn btn-back">戻る</button>
         </div>
       </div>
     </div>
