--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -106,11 +106,10 @@
         </tr>
         </tbody>
       </table>
-      </font>>
+      </font>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼</button><br><br>
-          <button type="submit" name="backToConfirm" class="btn btn-back">戻る</button>
+          <button type="submit" name="backToTop" class="btn btn-back">TOPへ戻る</button>
         </div>
       </div>
     </div>
