--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -67,6 +67,8 @@
         </tr>
         <tr>
           <th>引っ越し月</th>
+          <td><span th:text="*{month}"></span></td>
+          <input type="hidden" name="month" id="month" th:value="*{month}"/>
           <!---
           <td><span th:text="*{tel}"></span></td>
           <input type="hidden" name="tel" id="tel" th:value="*{tel}"/>
